--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorSecondary">@android:color/white</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
 
@@ -71,6 +73,16 @@
         <item name="android:layout_marginEnd">20dp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:backgroundTint">@color/cardColor</item>
+    </style>
+
+    <style name="aboutTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:fontFamily">@font/muli</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+
     </style>
 
 
