--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,13 +63,14 @@
 
     </style>
 
-    <style name="negativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+    <style name="positiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="android:layout_marginEnd">20dp</item>
-        <item name="android:textColor">@android:color/holo_red_light</item>
+        <item name="android:backgroundTint">@android:color/holo_red_light</item>
+        <item name="android:textColor">@android:color/white</item>
 <!--        <item name="android:backgroundTint">@android:color/holo_red_light</item>-->
     </style>
 
-    <style name="positiveButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+    <style name="negativeButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
         <item name="android:layout_marginEnd">20dp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:backgroundTint">@color/cardColor</item>
